Refactor: CalendarController 단위 테스트를 Firestore 구조에 맞게 변경
기존 MySQL 기반 테스트에서 Firebase Firestore 구조에 맞춰 목 객체 및 흐름을 수정함

Related to: #4